--- a/11. contacts.html
+++ b/11. contacts.html
@@ -36,7 +36,7 @@
 <!-- Content -->
 <body>
     <section class="contact-section-alt">
-        <h1>Get in Touch</h1>
+        <h1 style="color: #998c7f;">Get <span style="color: #8d7762;">In Touch</span></h1>
         <div class="contact-info-alt">
             <div class="contact-card">
                 <p><strong>Address:</strong> 26 Wellington Street, Roseberry 2018 New South Wales</p>
@@ -46,7 +46,7 @@
 				<p><strong>For Pre-Wedding:</strong> Febry (+61) 420 258 277</p>
             </div>
             <div class="map-card">
-                <h2>Find Us</h2>
+                <h2 style="color: #998c7f;">Find <span style="color: #8d7762;">Us</span></h2>
                 <!-- Google Maps Embed -->
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6621.264170951203!2d151.1964342755547!3d-33.92486747320526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12b1a62c902d4d%3A0xa455f1755ca4cf41!2s26%20Wellington%20St%2C%20Rosebery%20NSW%202018!5e0!3m2!1sen!2sau!4v1729069453797!5m2!1sen!2sau" 
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="contact-container">
-            <h2>Contact Us</h2>
+            <h2 style="color: #998c7f;">Contact <span style="color: #8d7762;">Us</span></h2>
             <form id="contact-form" class="contact-form">
                 <div class="form-group">
                     <label for="name">Name</label>
