--- a/12. faqs.html
+++ b/12. faqs.html
@@ -37,7 +37,7 @@
 <body>
  <section class="faq-section">
     <div style="text-align: center; margin-top: 10px;">
-        <h1 class="tagline">FAQ</h1>
+        <h1 class="tagline" style="color: #998c7f;">Frequently <span style="color: #8d7762;">Asked Questions</span></h1>
     </div>    
         <div class="faq-container">
             <div class="faq-item">
