--- a/13. employments.html
+++ b/13. employments.html
@@ -37,12 +37,12 @@
 <body>
     <section class="why-us-section">
         <div class="container">
-            <h2>Why Work With Us</h2>
+            <h2 style="color: #998c7f;">Employments</span></h2>
             <div class="reason-cards">
                 <div class="card">
                     <img src="13. Employments/experience.png" alt="Experience">
                     <h3>Years of Experience</h3>
-                    <p>With over 10 years in the industry, we’ve perfected the art of capturing the essence of every wedding. Our portfolio speaks for itself with hundreds of satisfied clients.</p>
+                    <p>With over 5 years in the industry, we’ve perfected the art of capturing the essence of every wedding. Our portfolio speaks for itself with hundreds of satisfied clients.</p>
                 </div>
                 <div class="card">
                     <img src="13. Employments/personalized.png" alt="Personalized">
