--- a/2. services.html
+++ b/2. services.html
@@ -46,12 +46,12 @@
 </div>
 <div class="container">
     <div class="card">
-        <img src="2. Services/photography5.webp" alt="portrait1">
-            <a href="3. photography.html" class="btn">Discover Our Photography</a>
+        <img src="3. Photography/photography3.webp" alt="portrait1">
+            <a href="3. photography.html" class="btn">Photography</a>
     </div>
     <div class="card">
-        <img src="2. Services/photography5.webp" alt="portrait1">
-        <a href="4. videography.html" class="btn">Discover Our Videography</a>
+        <img src="3. Photography/photography7.webp" alt="portrait1">
+        <a href="4. videography.html" class="btn">Videography</a>
     </div>
 </div>
 
