--- a/8. whatwesee.html
+++ b/8. whatwesee.html
@@ -38,30 +38,37 @@
     <div class="reviewcontent">
         <div class="testimonials">
             <div class="testimonial" style="text-align: left;">
-                <h3>- Vision -</h3>
+                <h3>- Our Vision -</h3>
                 <p>“To be the premier storytellers through photography and cinematography, capturing life’s most memorable moments with creativity, authenticity, and timeless elegance.”</p>
             </div>
             <div class="testimonial" style="text-align: right; margin-top: 40px;">
-                <h3>- Mission -</h3>
+                <h3>- Our Mission -</h3>
                 <p>“At Moments, our mission is to craft lasting memories through personalized and high-quality photography and film services. We aim to build genuine connections with our clients, ensuring that each story we capture reflects the true emotions and uniqueness of every event, from weddings to milestone celebrations. Our dedication is to preserve these moments beautifully and meaningfully for generations to come.”</p>
             </div>
             <div class="testimonial" style="text-align: center; margin-top: 40px;">
-                <h3>- Values -</h3>
+                <h3>- Our Values -</h3>
                 <div class="value-cards">
                     <div class="card">
-                        <img src="13. Employments/experience.png" alt="Experience">
-                        <h3>Years of Experience</h3>
-                        <p>With over 10 years in the industry, we’ve perfected the art of capturing the essence of every wedding. Our portfolio speaks for itself with hundreds of satisfied clients.</p>
+                        <h3>Authenticity</h3>
+                        <p>WWe believe in capturing genuine moments and emotions, 
+                            ensuring that every photograph reflects the true 
+                            essence of your love story and the unique details of 
+                            your special day.</p>
                     </div>
                     <div class="card">
-                        <img src="13. Employments/personalized.png" alt="Personalized">
-                        <h3>Personalized Approach</h3>
-                        <p>We take the time to get to know you and your vision. Every couple is unique, and we ensure that your wedding photos reflect your individual love story.</p>
+                          <h3>Professionalism</h3>
+                        <p>We are dedicated to providing excellent service through 
+                            punctuality, clear communication, and a respectful 
+                            presence, ensuring a smooth and enjoyable experience 
+                            for the couple and their guests.</p>
                     </div>
                     <div class="card">
-                        <img src="13. Employments/high-quality.png" alt="High-Quality">
-                        <h3>High-Quality Deliverables</h3>
-                        <p>From state-of-the-art cameras to meticulous post-processing, we guarantee high-resolution images that are ready for both digital use and print.</p>
+                        <h3>Creativity</h3>
+                        <p>Our passion for storytelling drives us to approach 
+                            each wedding with a fresh perspective, using artistic 
+                            techniques and imaginative compositions to produce 
+                            stunning, memorable images that you will cherish 
+                            forever.</p>
                     </div>
                 </div>    
             </div>
