--- a/6. vpricelist.html
+++ b/6. vpricelist.html
@@ -34,12 +34,12 @@
 <!-- Header End -->
 <!-- Content -->
 <div style="text-align: center; margin-top: 50px;">
-    <h1 class="tagline">PRICE <span>LIST</span></h1>
+    <h1 class="tagline";">PRICE <span>LIST</span></h1>
 <div class="container">
-    <div class="card" onclick="showDetails('6. Videography Pricelist/prewed.mp4','Evergreen Collection', '$3000 base','Half-day wedding coverage\n1 photographer\nAll photos included\n50 touch-ups included')">
+    <div class="card" onclick="showDetails('6. Videography Pricelist/vid1.mp4','Evergreen Collection', '$3000 base','Half-day wedding coverage\n1 photographer\nAll photos included\n50 touch-ups included')">
         <div class="image-wrapper">
             <img src="6. Videography Pricelist/paket1.webp" alt="Evergreen Collection">
-            <div class="play-button" onclick="showDetails('6. Videography Pricelist/prewed.mp4',
+            <div class="play-button" onclick="showDetails('6. Videography Pricelist/vid1.mp4',
             'Evergreen Collection', '$3000 base',
             'Half-day wedding coverage\n1 photographer\nAll photos included\n50 touch-ups included')">
                 <i class="play-icon">►</i>
@@ -50,10 +50,10 @@
             <p class="price">$3000 base</p>
         </div>
     </div>
-    <div class="card" onclick="showDetails('6. Videography Pricelist/prewed.mp4','Amber Collection', '$6000 base', 'Full-day wedding coverage\n2 photographers\n1 cinematographer\n4K Wedding Highlight Film\n80 touch-ups included')">
+    <div class="card" onclick="showDetails('6. Videography Pricelist/vid2.mp4','Amber Collection', '$6000 base', 'Full-day wedding coverage\n2 photographers\n1 cinematographer\n4K Wedding Highlight Film\n80 touch-ups included')">
         <div class="image-wrapper">
             <img src="6. Videography Pricelist/paket2.webp" alt="Amber Collection">
-        <div class="play-button" onclick="showDetails('6. Videography Pricelist/prewed.mp4',
+        <div class="play-button" onclick="showDetails('6. Videography Pricelist/vid2.mp4',
         'Amber Collection', '$6000 base', 
         'Full-day wedding coverage\n2 photographers\n1 cinematographer\n4K Wedding Highlight Film\n80 touch-ups included')">
             <i class="play-icon">►</i>
@@ -64,12 +64,12 @@
             <p class="price">$6000 base</p>
         </div>
     </div>
-        <div class="card" onclick="showDetails('6. Videography Pricelist/prewed.mp4',
+        <div class="card" onclick="showDetails('6. Videography Pricelist/vid3.mp4',
         'Infinity Collection', '$8500 base', 
         'Full-day wedding coverage\n2 photographers\n2 cinematographers\nUnlimited photos\n120 touch-ups included\nWedding Highlight Film\nFull Wedding Feature Film\nSame Day Edit\nDrone footage\nCustom wedding album and USB')">
             <div class="image-wrapper">
             <img src="6. Videography Pricelist/paket3.webp" alt="Infinity Collection">
-        <div class="play-button" onclick="showDetails('6. Videography Pricelist/prewed.mp4','Infinity Collection', '$8500 base', 'Full-day wedding coverage\n2 photographers\n2 cinematographers\nUnlimited photos\n120 touch-ups included\nWedding Highlight Film\nFull Wedding Feature Film\nSame Day Edit\nDrone footage\nCustom wedding album and USB')">
+        <div class="play-button" onclick="showDetails('6. Videography Pricelist/vid3.mp4','Infinity Collection', '$8500 base', 'Full-day wedding coverage\n2 photographers\n2 cinematographers\nUnlimited photos\n120 touch-ups included\nWedding Highlight Film\nFull Wedding Feature Film\nSame Day Edit\nDrone footage\nCustom wedding album and USB')">
             <i class="play-icon">►</i>
         </div>
         </div>
