--- a/header.html
+++ b/header.html
@@ -33,7 +33,7 @@
             <li class="dropdown">
                 <a href="13. employments.html" class="li-navbar">Employments</a>
                 <ul class="dropdown-menu">
-                    <li><a href="14. searchjob.html">Search Job</a></li>
+                    <li><a href="14. searchJob.html">Search Job</a></li>
                 </ul>
             </li>
         </ul>
