--- a/4. videography.html
+++ b/4. videography.html
@@ -35,7 +35,7 @@
 
 <!-- Content -->
 <body>
-    <div style="text-align: center; background-color: #998c7f;">
+    <div style="text-align: center; background-color: #9f8c7c; padding-bottom : 30px">
         <h1 class="tagline" style="color: black;">Why <span style="color: black;">Wedding Video?</span></h1>
     </div>
     <section class="team-member-container">
